移除分辨率设置

--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -1230,7 +1230,7 @@
 			<key>ReplaceTabWithSpace</key>
 			<false/>
 			<key>Resolution</key>
-			<string>2560x2048</string>
+			<string></string>
 			<key>SanitiseClearScreen</key>
 			<false/>
 			<key>TextRenderer</key>
