修改配置文件，满足系统更新

--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -837,7 +837,7 @@
                 <key>BlacklistAppleUpdate</key>
                 <false/>
                 <key>DmgLoading</key>
-                <string>Signed</string>
+                <string>Disabled</string>
                 <key>EnablePassword</key>
                 <false/>
                 <key>ExposeSensitiveData</key>
@@ -851,7 +851,7 @@
                 <key>ScanPolicy</key>
                 <integer>0</integer>
                 <key>SecureBootModel</key>
-                <string>Disabled</string>
+                <string>Default</string>
                 <key>Vault</key>
                 <string>Optional</string>
             </dict>
