--- a/EFI/OC/oldConfig.plist
+++ b/EFI/OC/oldConfig.plist
@@ -20,14 +20,6 @@
                     <key>Enabled</key>
                     <true/>
                     <key>Path</key>
-                    <string>SSDT-6950.aml</string>
-                </dict>
-                <dict>
-                    <key>Comment</key>
-                    <string></string>
-                    <key>Enabled</key>
-                    <true/>
-                    <key>Path</key>
                     <string>SSDT-RHUB.aml</string>
                 </dict>
                 <dict>
@@ -45,6 +37,14 @@
                     <true/>
                     <key>Path</key>
                     <string>SSDT-EC-USBX-DESKTOP.aml</string>
+                </dict>
+                <dict>
+                    <key>Comment</key>
+                    <string></string>
+                    <key>Enabled</key>
+                    <true/>
+                    <key>Path</key>
+                    <string>SSDT-6950XT-73A5-GPU-SPOOF.aml</string>
                 </dict>
             </array>
             <key>Delete</key>
@@ -80,36 +80,6 @@
                     <integer>0</integer>
                     <key>TableSignature</key>
                     <data>RFNEVA==</data>
-                </dict>
-                <dict>
-                    <key>Base</key>
-                    <string></string>
-                    <key>BaseSkip</key>
-                    <integer>0</integer>
-                    <key>Comment</key>
-                    <string>Change MC__ to MCHC</string>
-                    <key>Count</key>
-                    <integer>0</integer>
-                    <key>Enabled</key>
-                    <true/>
-                    <key>Find</key>
-                    <data>TUNfXw==</data>
-                    <key>Limit</key>
-                    <integer>0</integer>
-                    <key>Mask</key>
-                    <data></data>
-                    <key>OemTableId</key>
-                    <data></data>
-                    <key>Replace</key>
-                    <data>TUNIQw==</data>
-                    <key>ReplaceMask</key>
-                    <data></data>
-                    <key>Skip</key>
-                    <integer>0</integer>
-                    <key>TableLength</key>
-                    <integer>0</integer>
-                    <key>TableSignature</key>
-                    <data>U1NEVA==</data>
                 </dict>
                 <dict>
                     <key>Base</key>
@@ -297,7 +267,7 @@
                     <key>BundlePath</key>
                     <string>AppleALC.kext</string>
                     <key>Comment</key>
-                    <string>V1.8.5</string>
+                    <string>V1.8.6</string>
                     <key>Enabled</key>
                     <true/>
                     <key>ExecutablePath</key>
@@ -701,7 +671,7 @@
                 <key>MaxKernel</key>
                 <string></string>
                 <key>MinKernel</key>
-                <string></string>
+                <string>19.0.0</string>
             </dict>
             <key>Force</key>
             <array/>
@@ -738,7 +708,7 @@
                 <key>ForceSecureBootScheme</key>
                 <false/>
                 <key>IncreasePciBarSize</key>
-                <false/>
+                <true/>
                 <key>LapicKernelPanic</key>
                 <false/>
                 <key>LegacyCommpage</key>
@@ -1013,11 +983,11 @@
                 <key>AdviseFeatures</key>
                 <false/>
                 <key>MLB</key>
-                <string>F5K145902QXK3F7AD</string>
+                <string>F5K315403CDK3F7JA</string>
                 <key>MaxBIOSVersion</key>
                 <false/>
                 <key>ProcessorType</key>
-                <integer>3842</integer>
+                <integer>3841</integer>
                 <key>ROM</key>
                 <data>NsLyIsPN</data>
                 <key>SpoofVendor</key>
@@ -1027,9 +997,9 @@
                 <key>SystemProductName</key>
                 <string>MacPro7,1</string>
                 <key>SystemSerialNumber</key>
-                <string>F5KGN0VDP7QM</string>
+                <string>F5KKK3Y6P7QM</string>
                 <key>SystemUUID</key>
-                <string>A3912B93-B343-4150-ADF3-D932345074D8</string>
+                <string>A523361E-72A0-42CA-8BA4-55D1324BB084</string>
             </dict>
             <key>UpdateDataHub</key>
             <true/>
